seedboxk8s/applications/bk2/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bk2-metube
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bk2-metube
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bk2-metube
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
      - name: metube
        image: ghcr.io/alexta69/metube:latest@sha256:8e2fe9beeefc55a02f6e1d04cad0fc3c22e8f067d309188f016551dc99ec27b3
        ports:
        - containerPort: 8081
        volumeMounts:
        - mountPath: /temporary
          name: metube-temp
          readOnly: false
        - mountPath: /state
          name: bk2-metube-state-pvc
          readOnly: false
        - mountPath: /media
          name: seedboxmedia-nfs
          readOnly: false
        - mountPath: /options
          name: bk2-ytdl-options
          readOnly: true
      volumes:
      - name: metube-temp
        emptyDir: {}
      - name: bk2-metube-state-pvc
        persistentVolumeClaim:
          claimName: bk2-metube-state-pvc
      - name: seedboxmedia-nfs
        persistentVolumeClaim:
          claimName: seedboxmedia-nfs-pvc
      - name: bk2-ytdl-options
        configMap:
          name: bk2-ytdl-options
