seedboxk8s/applications/bk2/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bk2-metube
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: bk2-metube
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
