seedboxk8s/applications/bk2/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bk2
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: bk2 (MeTube)
    gethomepage.dev/group: Ao
    gethomepage.dev/icon: metube
    gethomepage.dev/href: https://bk2.${productionClusterFqdn}
    gethomepage.dev/pod-selector: app.kubernetes.io/name=bk2-metube
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bk2.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: bk2-metube
          kind: Service
          port: 8081
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
